[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "*"
glam = "*"
raw-window-handle = "*"
bgfx-rs = { path="../" }
freetype-rs = "0.29.0"
winit = "0.22.2"
image = "0.23.14"
[[bin]]
name = "cubes"
path = "./cubes.rs"

[[bin]]
name = "cube"
path = "./cube.rs"

[[bin]]
name = "helloworld"
path = "./helloworld.rs"

[[bin]]
name = "windows"
path = "./windows.rs"

[[bin]]
name = "triangle"
path = "./triangle.rs"

[[bin]]
name = "font"
path = "./font.rs"


[[bin]]
name = "minimal"
path = "./minimal.rs"

[[bin]]
name = "winit"
path = "./winit.rs"

[[bin]]
name = "image"
path = "./image.rs"