[package]
license = "BSD-2-Clause"
authors = ["Daniel Collin <daniel@collin.com>", "litch0 <lmtr0@protonmail.ch>"]
name = "bgfx-sys"
version = "0.5.0"
edition = "2021"

exclude = [
    "bgfx/bindings",
    "bgfx/examples",
    "bgfx/3rdparty/cgltf",
    "bgfx/3rdparty/dear-imgui",
    "bgfx/3rdparty/glslang",
    "bgfx/3rdparty/fcpp",
    "bgfx/3rdparty/glsl-optimizer",
    "bgfx/3rdparty/spirv-cross",
    "bgfx/3rdparty/spirv-headers",
    "bgfx/3rdparty/spirv-tools",
    "bgfx/tools",
]

[lib]
crate_type = [ "rlib" ]

[badges]
maintenance = {status = "actively-developed"}

[build-dependencies]
bindgen = "0.59.1"